apps/adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-service
  namespace: adguard
spec:
  selector:
    app: adguard
  ports:
    - name: web
      port: 80
      targetPort: 80
  type: ClusterIP
