apps/adguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-ingress
  namespace: adguard
spec:
  rules:
    - host: adguard.golias.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard-service
                port:
                  number: 80
